# mujoco-usd-converter

./: .gitignore  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  benchmarks.md  build.bat  build.sh  pyproject.toml  run.bat  run.sh  test.bat  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_form.yml  config.yml  documentation_request.yml  documentation_request_correction.yml  documentation_request_new.yml  feature_request.yml  feature_request_form.yml
.github/workflows/: benchmark.yml  ci.yml
.gitlab/: .gitlab-ci.yml  CODEOWNERS  templates.yml
mjc_usd_converter/: __init__.py  __main__.py  _flatten.py  _future.py  actuator.py  body.py  cli.py  convert.py  data.py  geom.py  joint.py  material.py  mesh.py  numpy.py  scene.py  utils.py
mujoco_usd_converter/: __init__.py  __main__.py  _version.py  actuator.py  body.py  cli.py  convert.py  data.py  geom.py  joint.py  material.py  mesh.py  numpy.py  scene.py  utils.py
mujoco_usd_converter/_impl/: _flatten.py  actuator.py  body.py  cli.py  convert.py  data.py  equality.py  exclude.py  geom.py  joint.py  material.py  mesh.py  numpy.py  scene.py  tendon.py  utils.py
scripts/: upload_wheel.py
tests/: testActuators.py  testAssetStructure.py  testBodies.py  testCli.py  testDependencies.py  testEqualities.py  testExcludes.py  testFrames.py  testGeom.py  testGeomFitting.py  testGeomFittingAABB.py  testJoints.py  testMaterial.py  testMesh.py  testMeshReflection.py  testNumpy.py  testPhysicsMaterials.py  testScene.py  testSites.py  testTendons.py  testUtils.py
tests/data/: actuator_edge_cases.xml  actuators.xml  attach_model.xml  attach_scene.xml  ball_joints.xml  bodies.xml  contact_excludes.xml  equality_connect.xml  equality_connect_attributes.xml  equality_connect_vs_weld.xml  equality_invalid_names.xml  equality_joint_attributes.xml  equality_weld_attributes.xml  equality_weld_with_nested_bodies.xml  equality_weld_with_sites.xml  fixed_vs_free_joints.xml  frames.xml  geom_default_density.xml  geoms.xml  geoms_fitting.xml  geoms_fitting_aabb.xml  geoms_inertia_from_geom.xml  hinge_joints.xml  hinges.xml  invalid names.xml  joint_attributes.xml  joint_limits.xml  joint_limits_no_autolimits.xml  materials.xml  meshes.xml  physics_materials.xml  reflected_meshes.xml  scene_attributes.xml  simple_actuator.xml  sites.xml  slide_joints.xml  tendon_actuator.xml  tendon_docs.xml  tendon_fixed_attributes.xml  tendon_pulley.xml  (+6 more)
tests/util/: ConverterTestCase.py
tools/: analyze_menagerie_models.py  benchmark_menagerie.py  install_mjc_schema.py  manage_annotations.py  menagerie_annotations.yaml  update_markdown_for_pypi.py  upload_wheel.py
