[project]
name = "mjc_usd_converter"
version = "0.1.0-dev"
description = "A MuJoCo to OpenUSD Data Converter"
authors = [
    {name = "Andrew Kaufman",email = "akaufman@nvidia.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
mujoco = "^3.3"
usd-exchange = "2.0.0.dev0+usd2502.mr113.632.37ab7d5d.gl"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [ { include = "mjc_usd_converter/*.py" } ]

[tool.poetry.scripts]
mjc_usd_converter = "mjc_usd_converter.__main__:cli_main"

[[tool.poetry.source]]
name = "internal"
url = "https://REDACTED/simple"
priority = "primary"
